test/fixtures/ingress1-raw.json
{
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
        "creationTimestamp": "2023-06-03T11:00:00Z",
        "generation": 1,
        "managedFields": [
            {
                "apiVersion": "networking.k8s.io/v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": {
                    "f:spec": {
                        "f:rules": {}
                    }
                },
                "manager": "kubectl",
                "operation": "Apply",
                "time": "2023-06-03T11:00:00Z"
            }
        ],
        "name": "my-ingress",
        "namespace": "default",
        "resourceVersion": "111222",
        "uid": "dd4567ee-8901-2def-3456-678901abcdef"
    },
    "spec": {
        "ingressClassName": "nginx",
        "rules": [
            {
                "host": "example.com",
                "http": {
                    "paths": [
                        {
                            "backend": {
                                "service": {
                                    "name": "my-service",
                                    "port": {
                                        "number": 80
                                    }
                                }
                            },
                            "path": "/",
                            "pathType": "Prefix"
                        }
                    ]
                }
            }
        ]
    },
    "status": {
        "loadBalancer": {
            "ingress": [
                {
                    "ip": "203.0.113.1"
                }
            ]
        }
    }
}
